tests/snapshots/ir_snapshots__bell_state_native_optimized.snap
---
source: tests/ir_snapshots.rs
expression: native_opt_str
---
NativeCircuit {
    num_qubits: 2,
    num_clbits: 2,
    gates: [
        Rz(
            0,
            3.141592653589,
        ),
        Ry(
            0,
            1.570796326794,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Ry(
            1,
            1.570796326794,
        ),
        Rz(
            0,
            1.570796326794,
        ),
        Rz(
            1,
            1.570796326794,
        ),
        Rzz(
            0,
            1,
            -1.570796326794,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Ry(
            1,
            1.570796326794,
        ),
        Measure(
            0,
            0,
        ),
        Measure(
            1,
            1,
        ),
    ],
}
