tests/snapshots/ir_snapshots__bell_state_rigetti.snap
---
source: tests/ir_snapshots.rs
expression: lowered
---
BackendCircuit {
    backend: Rigetti,
    num_qubits: 2,
    num_clbits: 2,
    gates: [
        Rz(
            0,
            1.5707963267948966,
        ),
        Rot(
            0,
            1.5707963267948966,
        ),
        Rz(
            1,
            1.5707963267948966,
        ),
        Rot(
            1,
            1.5707963267948966,
        ),
        Cz(
            0,
            1,
        ),
        Rz(
            0,
            1.5707963267948966,
        ),
        Measure(
            0,
            0,
        ),
        Rz(
            1,
            3.141592653589793,
        ),
        Rot(
            1,
            1.5707963267948966,
        ),
        Rz(
            1,
            1.5707963267948966,
        ),
        Measure(
            1,
            1,
        ),
    ],
}
