tests/snapshots/ir_snapshots__bell_state_trapped_ion.snap
---
source: tests/ir_snapshots.rs
expression: lowered_str
---
BackendCircuit {
    backend: TrappedIon,
    num_qubits: 2,
    num_clbits: 2,
    gates: [
        Rz(
            0,
            3.141592653589,
        ),
        Rot(
            0,
            1.570796326794,
        ),
        Rz(
            1,
            3.141592653589,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rzz(
            0,
            1,
            -1.570796326794,
        ),
        Rz(
            1,
            -1.570796326794,
        ),
        Rot(
            1,
            1.570796326794,
        ),
        Rz(
            0,
            1.570796326794,
        ),
        Measure(
            0,
            0,
        ),
        Measure(
            1,
            1,
        ),
    ],
}
