tests/snapshots/ir_snapshots__ghz_4_native_optimized.snap
---
source: tests/ir_snapshots.rs
expression: native_opt
---
NativeCircuit {
    num_qubits: 4,
    num_clbits: 0,
    gates: [
        Rz(
            0,
            3.141592653589793,
        ),
        Ry(
            0,
            1.5707963267948966,
        ),
        Rz(
            1,
            3.141592653589793,
        ),
        Ry(
            1,
            1.5707963267948966,
        ),
        Rz(
            0,
            1.5707963267948966,
        ),
        Rz(
            1,
            1.5707963267948966,
        ),
        Rzz(
            0,
            1,
            -1.5707963267948966,
        ),
        Rz(
            1,
            3.141592653589793,
        ),
        Ry(
            1,
            1.5707963267948966,
        ),
        Rz(
            2,
            3.141592653589793,
        ),
        Ry(
            2,
            1.5707963267948966,
        ),
        Rz(
            0,
            1.5707963267948966,
        ),
        Rz(
            2,
            1.5707963267948966,
        ),
        Rzz(
            0,
            2,
            -1.5707963267948966,
        ),
        Rz(
            2,
            3.141592653589793,
        ),
        Ry(
            2,
            1.5707963267948966,
        ),
        Rz(
            3,
            3.141592653589793,
        ),
        Ry(
            3,
            1.5707963267948966,
        ),
        Rz(
            0,
            1.5707963267948966,
        ),
        Rz(
            3,
            1.5707963267948966,
        ),
        Rzz(
            0,
            3,
            -1.5707963267948966,
        ),
        Rz(
            3,
            3.141592653589793,
        ),
        Ry(
            3,
            1.5707963267948966,
        ),
    ],
}
